--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<html>
-<head>
-	<title>test</title>
-</head>
-<body>
-<h1>testing george</h1>
-</body>
-</html>
+	<html>
+		<head>
+			<title>George's First Project</title>
+		</head>
+	<body>
+		<h1>Batcave</h1>
+   		<p>This is the secret headquarters of Batman</p>
+	</body>
+	</html>
