--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-			<title>George's First Project</title>
+			<title></title>
 		</head>
 	<body>
 		<h1>Batcave</h1>
